--- a/scripts/06_EpitopePrediction.sh.template
+++ b/scripts/06_EpitopePrediction.sh.template
@@ -8,8 +8,10 @@
 #mkdir -p ${dir_Pvac}/${Abnm_ID}
 
 #docker run --rm -v ${dir_Output}:/Output \
-#	-v ${dir_Pvac}/${Abnm_ID}:/output_dir griffithlab/pvactools:1.1.5 \
+#	-v ${dir_Pvac}/${Abnm_ID}:/output_dir griffithlab/pvactools \
 #	pvacseq run /Output/${Abnm_ID}/${Abnm_ID}_m2_vep_filtered.vcf \
+#       -t 4 \
+#       --iedb-install-directory /opt/iedb \
 #	${Abnm_ID} \
 #	${HLA} \
 #	MHCflurry MHCnuggetsI MHCnuggetsII NNalign NetMHC PickPocket SMM SMMPMBEC SMMalign \
